kubernetes/kfca/overlays/okd/ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: k8s-federated-credential-api
  namespace: k8s-federated-credential
  annotations:
    externaldns.k8s.io: unifi
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: https-gateway
      namespace: openshift-ingress

    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: listeners
      namespace: openshift-ingress
  hostnames: ["kfca.okd.homelab.arthurvardevanyan.com"]
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: k8s-federated-credential-api
          namespace: k8s-federated-credential
          port: 8088
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
