kubernetes/kfca/overlays/okd/egress-firewall.yaml
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: k8s-federated-credential
spec:
  egress:
    # Google Range
    # https://support.google.com/a/answer/10026322?hl=en
    # https://www.gstatic.com/ipranges/goog.json
    - type: Allow
      to:
        dnsName: storage.googleapis.com
    - type: Allow
      to:
        cidrSelector: 142.250.0.0/15
    - type: Allow
      to:
        cidrSelector: 172.217.0.0/16
    # Fix CIDRs
    - type: Allow
      to:
        cidrSelector: 0.0.0.0/0
    - type: Deny
      to:
        cidrSelector: 0.0.0.0/0
